# diplom

./: .env.example  .env.sample  .flake8  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
edu_modules/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
edu_modules/migrations/: 0001_initial.py
modules/: admin.py  apps.py  models.py  pagination.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
modules/migrations/: 0001_initial.py  0002_initial.py  0002_module_liked_users_module_likes_lesson.py  0003_alter_module_description_alter_module_title.py  0003_subscription.py  0004_remove_lesson_is_published_remove_lesson_last_update_and_more.py  0005_remove_module_liked_users_remove_module_likes.py
modules/templates/modules/: base.html  index.html
users/: admin.py  forms.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0002_user_telegram.py  0003_alter_user_groups_alter_user_is_staff_and_more.py  0003_user_is_verified_user_token.py  0004_alter_user_token.py  0005_alter_user_options_alter_user_managers_and_more.py  0006_remove_user_is_verified.py
users/templates/users/: profile_update.html  registration_email.html  user_confirm_delete.html  user_list.html  user_login.html  user_password_reset.html  user_profile.html  (+1 more)
